crates/plotnik-lib/tests/02-parser/recovery_validation/field_equals_typo_no_value.txt
(call name=)
==== diagnostics ====
error: fields use `:`, not `=`
 --> query.ptk:1:11
  |
1 | (call name=)
  |           ^
  |
help: use `:`
  |
1 - (call name=)
1 + (call name:)
  |
